[FIX] Delete spacing under footer

--- a/src/public/css/global/footer/footer.scss
+++ b/src/public/css/global/footer/footer.scss
@@ -9,7 +9,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 150px;
     &-content{
         display: grid;
         justify-content: space-evenly;
