--- a/src/public/css/global/main/main.scss
+++ b/src/public/css/global/main/main.scss
@@ -66,7 +66,7 @@ html {
 
 .flex-wrapper {
     display: flex;
-    min-height: 80vh;
+    min-height: 90vh;
     flex-direction: column;
     justify-content: space-between;
 }
